# mewgenics_analysis

./: .clangd  .gitignore  .gitmodules  ATTRIBUTION.md  README.md  git_submodule_update.bat  requirements.txt
cpp/: CMakeLists.txt  build.sh  build_mingw-w64-clang-x86_64.bat  build_mingw-w64-ucrt-x86_64.bat  build_win64.bat  build_x64-ClangCL.bat  build_x64.bat  clean.bat
cpp/amoeba/: CMakeLists.txt  amoeba.cpp  amoeba.hpp  amoeba_imgui.cpp  amoeba_sql_logger.cpp  cosmic_ooze.cpp  debug_console.hpp  function_hook.hpp  minhook_support.hpp  summarizer.py  tlog.hexpat  transaction_logger.cpp  transaction_logger.hpp
cpp/amoeba/ffi/: cat_factory.cpp  cat_factory.hpp  experimental.cpp  experimental.hpp
cpp/amoeba/misc/: bn_find_function_rvas.py  decompress.py  tlog.hexpat
cpp/amoeba/types/: glaiel.hpp  gon.hpp  msvc.hpp  phmap.hpp  sqlite3.hpp
cpp/amoeba/utilities/: checksum.hpp  debug_console.hpp  function_hook.hpp  memory.hpp  msvcfunc_interceptor.hpp  ringbuffer.hpp  sqlite3_conn_wrapper.cpp  sqlite3_conn_wrapper.hpp  strings.hpp  transaction_logger.cpp  transaction_logger.hpp
cpp/cosmic_ooze/: CMakeLists.txt
cpp/lib/Mewgenics/: CMakeLists.txt  Mewgenics.def
cpp/lib/cmake/SDL/: CMakeLists.txt
cpp/lib/cmake/detours/: CMakeLists.txt
cpp/lib/cmake/imgui/: CMakeLists.txt
cpp/lib/cmake/libtomcrypt/: CMakeLists.txt
cpp/lib/sqlite3/: CMakeLists.txt  ORIGINS.md
imhex_patterns/: cat.hexpat  files_pedigree.hexpat
python/: 0_dump_save.py  1_cat_dump.py  1_fishnet.py  1_verify_coi_calculation.py  2_amoeba_diff.py
python/common/: dumped_save.py  sql_save.py
scripts/: 1_cat_dump.py  1_pedigree_hash_algorithm.py  1_verify_coi_calculation.py
scripts/common/: dumped_save.py
